--- a/etc/_팀교육/프로그래밍 교육/StoryOfList.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/StoryOfList.ipynb
@@ -410,18 +410,18 @@
     "\n",
     "즉, 위의 표현식은 (예를 들어 빔이 총 5개라고 가정하면)<br><br>\n",
     "\"\"\"<br>\n",
-    "1번째_단면적 * 1번째_길이,<br>\n",
-    "2번째_단면적 * 2번째_길이,<br>\n",
-    "3번째_단면적 * 3번째_길이<br>\n",
-    "4번째_단면적 * 4번째_길이<br>\n",
-    "5번째_단면적 * 5번째_길이<br>\n",
+    "1번째_단면적 x 1번째_길이,<br>\n",
+    "2번째_단면적 x 2번째_길이,<br>\n",
+    "3번째_단면적 x 3번째_길이<br>\n",
+    "4번째_단면적 x 4번째_길이<br>\n",
+    "5번째_단면적 x 5번째_길이<br>\n",
     "\"\"\"<br><br>\n",
     "이렇게 총 5줄(혹은 10만줄)의 표현으로 수행할 연산을<br>\n",
     "<br>\n",
-    "***\"\"\"<br>\n",
+    "\"\"\"<br>\n",
     "for N in 리스트요소개수만큼의수열:<br>\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;N번째_단면적 * N번째_길이<br>\n",
-    "\"\"\"***<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;N번째_단면적 x N번째_길이<br>\n",
+    "\"\"\"<br>\n",
     "이렇게 추상화된 2줄의 표현식으로 바꾸어 작성한 코드입니다.\n",
     "<br><br><br>\n",
     "\n",
