--- a/etc/_팀교육/프로그래밍 교육/python_tutorial.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/python_tutorial.ipynb
@@ -21,9 +21,9 @@
     "    - <a href =\"#데이터를-부르는-법\">데이터를 부르는 법</a>\n",
     "    - <a href =\"#데이터를-삭제하는-법\">데이터를 삭제하는 법</a>\n",
     "    - <a href =\"#데이터를-수정하는-법\">데이터를 수정하는 법</a>\n",
-    "- <a href=\"#딕셔너리\">딕셔너리</a>\n",
-    "- <a href=\"#if\">if</a>\n",
     "- <a href=\"#for\">for</a>\n",
+    "- <a href=\"#if\">if</a>\n",
+    "- <a href=\"#딕셔너리\">딕셔너리</a>\n",
     "- <a href=\"#함수와-파라미터\">함수와 파라미터</a>\n",
     "    - 파라미터와 아규먼트의 차이\n",
     "<br><br><br>\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,60 +65,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5549999999999997"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1.555 + 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "3+3\n",
     "3-3\n",
@@ -131,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'만규는 \"바보\"'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'JangMankYu'\n",
     "\"JangMankyu\"\n",
@@ -157,20 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nㅁㄴㅇㄻㄴㅇㄹ\\nㅇㄻㄴㅇㄻㄴㄹㅇㅁㄴㅇㄹ\\nㅁㄴㄻㄴㅇㄻㄴㄹ\\n\\n'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "ㅁㄴㅇㄻㄴㅇㄹ\n",
@@ -189,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,20 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "210"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = a * 10\n",
     "b"
@@ -265,18 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "빈리스트 = []\n",
     "print(빈리스트)\n",
@@ -294,20 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2]\n",
-      "[1, 2]\n",
-      "[1, 2]\n",
-      "[1, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "어떤리스트 = [1, 2]\n",
     "print(어떤리스트)\n",
@@ -336,18 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "['첫번째 데이터', '두번째 데이터', '세번째 데이터']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "리스트 = []\n",
     "print(리스트)\n",
@@ -368,17 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 2.5, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "삽입_리스트 = [1,2,3,4,5]\n",
     "삽입_리스트.insert(2, 2.5) ## 입력 인수: ( 인덱스번호, 삽입할 데이터 )\n",
@@ -402,40 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "삽입_리스트[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2351458605632\n",
-      "2351361097968\n",
-      "2351361098000\n",
-      "2351436392336\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(id(삽입_리스트))\n",
     "print(id(삽입_리스트[0]))\n",
@@ -452,20 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 2.5, 3, 4, 5]\n",
-      "[2351361097968, 2351361098000, 2351436392336, 2351361098032, 2351361098064, 2351361098096]\n",
-      "[1, 2, 2.5]\n",
-      "[2351361097968, 2351361098000, 2351436392336]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "조회결과 = []\n",
     "메모리주소 = []\n",
@@ -509,18 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "[2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "삭제대상_리스트 = [1, 2, 3, 4, 5]\n",
     "print(삭제대상_리스트)\n",
@@ -531,17 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "삭제대상_리스트.remove(2)\n",
     "print(삭제대상_리스트)"
@@ -549,20 +396,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 4, 5]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "삭제대상_리스트"
    ]
@@ -576,17 +412,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, '변경됨!', 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "수정대상_리스트 = [1,2,3,4,5,6,7,8,9]\n",
     "수정대상_리스트[3] = \"변경됨!\"\n",
@@ -596,17 +424,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 101, 102, 103, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "수정대상_리스트 = [1,2,3,4,5,6,7,8,9]\n",
     "수정대상_리스트[3:5] = [101,102,103]\n",
@@ -629,11 +449,49 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### for"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<< 기본 구조 >><br>\n",
+    "for &nbsp;&nbsp;&nbsp;i&nbsp;&nbsp;&nbsp; in&nbsp;&nbsp;&nbsp; some_list:<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;    do something~<br>\n",
+    "\"\"\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### if"
+   ]
   },
   {
    "cell_type": "code",
@@ -651,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,29 +518,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "나이딕셔너리[\"성민나이\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### if"
    ]
   },
   {
@@ -696,13 +536,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### for"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -735,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
