--- a/etc/_팀교육/프로그래밍 교육/etc.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/etc.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "################Module For Functional Programing##########################\n",
+    "################Module For Functional Programing#########################\n",
     "from functools import reduce\n",
     "from itertools import chain\n",
     "from itertools import groupby\n",
@@ -20,9 +20,8 @@
     "go = lambda *args: reduce(lambda a,f: f(a), args) ## 함수도 축약 가능 ##\n",
     "\n",
     "def dictUpdate(dic1,dic2):\n",
-    "    res = dic1.update(dic2)\n",
-    "    #res = {**dic1,**dic2}\n",
-    "    return dic1 #res\n",
+    "    dic1.update(dic2)\n",
+    "    return dic1\n",
     "    \n",
     "def dictsMerge(dics):\n",
     "    res = reduce(dictUpdate, dics)\n",
@@ -38,7 +37,7 @@
     "        for i in a: \n",
     "            yield from flat(i)\n",
     "    else: yield a\n",
-    "##########################################################################"
+    "#########################################################################"
    ]
   },
   {
@@ -894,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
