--- a/etc/_팀교육/프로그래밍 교육/python_tutorial.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/python_tutorial.ipynb
@@ -188,39 +188,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 1+2+3+4+5+6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "210"
+       "21"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "a = 1+2+3+4+5+6\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "b = a * 10\n",
-    "b"
+    "b\n",
+    "\n",
+    "a = 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 리스트"
+    "### 리스트 - (iterable)"
    ]
   },
   {
@@ -297,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +308,7 @@
      "output_type": "stream",
      "text": [
       "[1, 2]\n",
+      "{1, 2, 3, 4, 5}\n",
       "[1, 2]\n",
       "[1, 2]\n",
       "[1, 2]\n"
@@ -313,7 +317,9 @@
    ],
    "source": [
     "어떤리스트 = [1, 2]\n",
+    "(1,2)\n",
     "print(어떤리스트)\n",
+    "print({1,2,3,3,3,4,4,5})\n",
     "\n",
     "some리스트1 = list((1,2)) ## tuple을 List로 변환하는 방식\n",
     "some리스트2 = list({1,2}) ## Set를 List로 변환하는 방식\n",
@@ -339,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -405,22 +411,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "삽입_리스트[1]"
+    "삽입_리스트 = [1,2,3,4,5]\n",
+    "삽입_리스트[3]"
    ]
   },
   {
@@ -455,21 +462,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 2.5, 3, 4, 5]\n",
-      "['0x264c2a36930', '0x264c2a36950', '0x264c7f4d710', '0x264c2a36970', '0x264c2a36990', '0x264c2a369b0']\n",
-      "[1, 2, 2.5]\n",
-      "['0x264c2a36930', '0x264c2a36950', '0x264c7f4d710']\n"
+      "[1, 2, 3, 4, 5]\n",
+      "['0x19d934d6930', '0x19d934d6950', '0x19d934d6970', '0x19d934d6990', '0x19d934d69b0']\n",
+      "[1, 2, 3, 4, 5]\n",
+      "['0x19d934d6930', '0x19d934d6950', '0x19d934d6970', '0x19d934d6990', '0x19d934d69b0']\n"
      ]
     }
    ],
    "source": [
+    "from copy import deepcopy\n",
+    "삽입_리스트 = [1,2,3,4,5]\n",
+    "\n",
     "조회결과 = []\n",
     "메모리주소 = []\n",
     "for i in 삽입_리스트:\n",
@@ -478,11 +488,18 @@
     "\n",
     "print(조회결과)\n",
     "print(메모리주소)\n",
+    "# 조회결과.append(삽입_리스트[0])\n",
+    "# 조회결과.append(삽입_리스트[1])\n",
+    "# 조회결과.append(삽입_리스트[2])\n",
+    "# 조회결과.append(삽입_리스트[3])\n",
+    "# 조회결과.append(삽입_리스트[4])\n",
     "\n",
     "#심화\n",
-    "잘라낸_리스트 = 삽입_리스트[:3]\n",
+    "잘라낸_리스트 = [] #삽입_리스트[:3] #[3] 단일 인덱스 호출, [시작:끝]\n",
     "잘라낸_리스트_메모리주소 = []\n",
-    "for i in 잘라낸_리스트:\n",
+    "다른원본 = list(삽입_리스트)\n",
+    "for i in 다른원본:\n",
+    "    잘라낸_리스트.append(i)\n",
     "    잘라낸_리스트_메모리주소.append(hex(id(i)))\n",
     "    \n",
     "print(잘라낸_리스트)\n",
@@ -513,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -530,12 +547,14 @@
     "print(삭제대상_리스트)\n",
     "\n",
     "del 삭제대상_리스트[0]\n",
+    "# del 삭제대상_리스트[0]\n",
+    "# del 삭제대상_리스트[0]\n",
     "print(삭제대상_리스트)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -560,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, '변경됨!', 5, 6, 7, 8, 9]\n"
+      "[1, 2, 3, 999, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
@@ -576,13 +595,14 @@
     "# 불러서 할당하라\n",
     "## 불러서         -> 대치할 값(단일자료형, 반복가능 자료형 모두 가능)으로 할당\n",
     "수정대상_리스트[3] = \"변경됨!\"\n",
+    "수정대상_리스트[3] = 999\n",
     "\n",
     "print(수정대상_리스트)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -620,13 +640,16 @@
     "# 불러서 할당하라\n",
     "## 범위로 불러서    -> 대치할 값(반복가능 자료형: list)으로 할당\n",
     "수정대상_리스트[3:6] = [101,102,103]\n",
+    "# 수정대상_리스트[3] = 101\n",
+    "# 수정대상_리스트[4] = 102\n",
+    "# 수정대상_리스트[5] = 103\n",
     "\n",
     "print(수정대상_리스트)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -724,12 +747,13 @@
     }
    ],
    "source": [
-    "일차원array = \\\n",
-    "[1, 2, 3]\n",
+    "일차원array = [1, 2, 3]\n",
+    "\n",
     "\n",
     "이차원array = []\n",
     "for i in 일차원array:\n",
-    "    이차원array.append([i, i+1, i**2])\n",
+    "    res = [i, i+1, i**2] ##  하고싶은 연산 해서 res 에 집어넣기\n",
+    "    이차원array.append(res) ## res 를 새로운 리스트에 집어넣기\n",
     "\n",
     "print(이차원array)"
    ]
@@ -750,22 +774,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1, 2, 1], [2, 3, 4], [3, 4, 9]]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 1], [2, 3, 4], [3, 4, 9]]\n"
+     ]
     }
    ],
    "source": [
-    "[ [i, i+1, i**2] for i in 일차원array ]"
+    "일차원array = [1, 2, 3]\n",
+    "\n",
+    "\n",
+    "이차원array = []\n",
+    "for i in 일차원array:\n",
+    "    res = [i, i+1, i**2] ##  하고싶은 연산 해서 res 에 집어넣기\n",
+    "    이차원array.append(res) ## res 를 새로운 리스트에 집어넣기\n",
+    "\n",
+    "\n",
+    "\n",
+    "이차원array = [ [i, i+1, i**2] for i in 일차원array ]\n",
+    "print(이차원array)"
    ]
   },
   {
@@ -778,12 +810,14 @@
    "metadata": {},
    "source": [
     "#### 중첩 구조 - Digging(파고들기)\n",
-    "![image-2.png](attachment:image-2.png)"
+    "![image-2.png](attachment:image-2.png)\n",
+    "\n",
+    "내코드에 중첩이 3번이상되면 좆됐음 을 감지해라"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +958,7 @@
        " ['4학년', '6반']]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +1008,7 @@
        "  ['4학년', '6반']]]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1023,8 @@
     "    for j in 어떤리스트2:\n",
     "        학년별.append([i,j])\n",
     "    product.append(학년별)\n",
-    "product # 재료가 된 리스트의 구조를 무시하고 단일구조 리스트로 출력"
+    "product # 재료가 된 리스트의 구조를 무시하고 단일구조 리스트로 출력\n",
+    "product"
    ]
   },
   {
