--- a/etc/_팀교육/StrToolkit/파일기초설계/Pile FDN_240513_mk.ipynb
+++ b/etc/_팀교육/StrToolkit/파일기초설계/Pile FDN_240513_mk.ipynb
@@ -7,20 +7,17 @@
    "outputs": [],
    "source": [
     "################Module For Functional Programing#########################\n",
-    "from functools import reduce\n",
-    "from itertools import chain\n",
-    "from itertools import groupby\n",
+    "from functools import reduce; from itertools import chain\n",
+    "from itertools import groupby; import operator\n",
     "from copy import deepcopy\n",
     "curry = lambda f: lambda a,*args: f(a, *args) if (len(args)) else lambda *args: f(a, *args)\n",
     "\n",
-    "filter = curry(filter)\n",
-    "map = curry(map)\n",
-    "reduce = curry(reduce)\n",
+    "filter, map, reduce = curry(filter), curry(map), curry(reduce)\n",
     "\n",
     "go = lambda *args: reduce(lambda a,f: f(a), args) ## 함수도 축약 가능 ##\n",
     "\n",
     "def dictUpdate(dic1,dic2):\n",
-    "    res = dic1.update(dic2)\n",
+    "    dic1.update(dic2)\n",
     "    return dic1\n",
     "    \n",
     "def dictsMerge(dics):\n",
