--- a/etc/_팀교육/프로그래밍 교육/python_tutorial.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/python_tutorial.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "3.5549999999999997"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "int"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "1"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "'만규는 \"바보\"'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "'\\nㅁㄴㅇㄻㄴㅇㄹ\\nㅇㄻㄴㅇㄻㄴㄹㅇㅁㄴㅇㄹ\\nㅁㄴㄻㄴㅇㄻㄴㄹ\\n\\n'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "21"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,17 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x264c8c59600\n",
-      "0x264c2a36930\n",
-      "0x264c2a36950\n",
-      "0x264c7f4d710\n"
+      "0x23973ae2e80\n",
+      "0x2396cc36930\n",
+      "0x2396cc36950\n",
+      "0x2396cc36970\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,9 +470,9 @@
      "output_type": "stream",
      "text": [
       "[1, 2, 3, 4, 5]\n",
-      "['0x19d934d6930', '0x19d934d6950', '0x19d934d6970', '0x19d934d6990', '0x19d934d69b0']\n",
+      "['0x2396cc36930', '0x2396cc36950', '0x2396cc36970', '0x2396cc36990', '0x2396cc369b0']\n",
       "[1, 2, 3, 4, 5]\n",
-      "['0x19d934d6930', '0x19d934d6950', '0x19d934d6970', '0x19d934d6990', '0x19d934d69b0']\n"
+      "['0x2396cc36930', '0x2396cc36950', '0x2396cc36970', '0x2396cc36990', '0x2396cc369b0']\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "[[1, 4, 9], [16, 25, 36], [49, 64, 81]]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "[[1, 4, 9], [16, 25, 36], [49, 64, 81]]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        " ['4학년', '6반']]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "  ['4학년', '6반']]]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
        " ['4학년', '6반']]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        " 'yield']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,15 +1152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_4004/1281293189.py, line 1)",
+     "evalue": "invalid syntax (Temp/ipykernel_27796/1281293189.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\HEC\\AppData\\Local\\Temp/ipykernel_4004/1281293189.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    try = 1\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\HEC\\AppData\\Local\\Temp/ipykernel_27796/1281293189.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    try = 1\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1283,47 +1283,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 조건 판별이 범위일때"
+    "#### 컨디션 구문 예제1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 > 2"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 조건 판별이 범위가 아닐때"
+    "#### 컨디션 구문 예제2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "참입니다~!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if our_age:\n",
+    "    print(\"참입니다~!\")\n",
+    "else:\n",
+    "    print(\"거짓입니다~!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "사용자의 입력값에 따라 다르게 반응하는 구문을 작성해 보자"
+    "#### 컨디션 구문 예제3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1339,6 +1378,20 @@
    ],
    "source": [
     "isinstance(\"ddd\", str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 조건 판별이 범위가 아닐때"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "사용자의 입력값에 따라 다르게 반응하는 구문을 작성해 보자"
    ]
   },
   {
@@ -1364,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
