--- a/etc/_팀교육/StrToolkit/파일기초설계/Pile FDN_240513_mk.ipynb
+++ b/etc/_팀교육/StrToolkit/파일기초설계/Pile FDN_240513_mk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
+      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\.libs\\libopenblas.NOIJJG62EMASZI6NYURL6JBKM4EVBGM7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math\n",
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +263,7 @@
        "  <POINT (0 -2.25)>]]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +339,7 @@
        "shapely.lib.Geometry"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +510,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<POLYGON ((0.25 0.9, 0.249 0.875, 0.245 0.851, 0.239 0.827, 0.231 0.804, 0.2...>,\n",
+       " <POLYGON ((-0.5 -0.45, -0.501 -0.475, -0.505 -0.499, -0.511 -0.523, -0.519 -...>,\n",
+       " <POLYGON ((1 -0.45, 0.999 -0.475, 0.995 -0.499, 0.989 -0.523, 0.981 -0.546, ...>]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PileLocation = [\n",
+    "               Point(Xi[i,n-1],Yi[i,n-1]).buffer(Pile[3]/2)\n",
+    "               for i in range(n)\n",
+    "               ]\n",
+    "PileLocation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
