--- a/etc/_팀교육/StrToolkit/파일기초설계/test.ipynb
+++ b/etc/_팀교육/StrToolkit/파일기초설계/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,6 +12,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3452: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -73,6 +81,73 @@
     "\n",
     "if __name__==\"__main__\":\n",
     "    main(sys.argv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing\n",
+    "\n",
+    "# 작업 함수: 리스트의 요소를 제곱\n",
+    "def square(number):\n",
+    "    return number * number\n",
+    "\n",
+    "# 병렬 처리 함수\n",
+    "def parallel_square(numbers):\n",
+    "    with multiprocessing.Pool(processes=4) as pool:\n",
+    "        results = pool.map(square, numbers)\n",
+    "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def run_parallel_square():\n",
+    "    # 큰 리스트 생성\n",
+    "    numbers = list(range(1, 1000000))\n",
+    "\n",
+    "    # 시작 시간 기록\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    # 병렬 처리 함수 호출\n",
+    "    results = parallel_square(numbers)\n",
+    "\n",
+    "    # 종료 시간 기록\n",
+    "    end_time = time.time()\n",
+    "\n",
+    "    # 결과 출력 (처리 시간)\n",
+    "    print(f\"Processing time: {end_time - start_time} seconds\")\n",
+    "\n",
+    "# 병렬 처리 함수 호출\n",
+    "run_parallel_square()\n"
    ]
   },
   {
