--- a/etc/_팀교육/StrToolkit/파일기초설계/20240528_chb_refactoring.ipynb
+++ b/etc/_팀교육/StrToolkit/파일기초설계/20240528_chb_refactoring.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
-      "c:\\Users\\HEC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\numpy\\.libs\\libopenblas.NOIJJG62EMASZI6NYURL6JBKM4EVBGM7.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np\n",
     "import copy\n",
+    "from copy import deepcopy\n",
     "from itertools import chain\n",
     " \n",
     "Fy   = 2.75000e-01\n",
@@ -63,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +230,7 @@
        "  'tf': 11.5}}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,10 +249,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ptype = lambda x:x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UB-356x171x51\n",
+      "UB-356x171x51\n",
+      "UB-356x171x51\n",
+      "UB-356x171x51\n"
+     ]
+    }
+   ],
+   "source": [
+    "matKeys= list(map(lambda x: x[0], Mat))\n",
+    "matKeys\n",
+    "sections = []\n",
+    "for k in matKeys:\n",
+    "    newElem = deepcopy(ptype)\n",
+    "    newElem.name = k\n",
+    "    sections.append(newElem)\n",
+    "    \n",
+    "print(sections[0].name)\n",
+    "print(sections[1].name)\n",
+    "print(sections[2].name)\n",
+    "print(sections[3].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1266999155584\n",
+      "1266999155584\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(deepcopy(ptype)))\n",
+    "print(id(deepcopy(ptype)))"
+   ]
   }
  ],
  "metadata": {
