--- a/etc/_팀교육/StrToolkit/파일기초설계/test.ipynb
+++ b/etc/_팀교육/StrToolkit/파일기초설계/test.ipynb
@@ -105,57 +105,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import multiprocessing\n",
-    "\n",
-    "# 작업 함수: 리스트의 요소를 제곱\n",
-    "def square(number):\n",
-    "    return number * number\n",
-    "\n",
-    "# 병렬 처리 함수\n",
-    "def parallel_square(numbers):\n",
-    "    with multiprocessing.Pool(processes=4) as pool:\n",
-    "        results = pool.map(square, numbers)\n",
-    "    return results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "\n",
-    "def run_parallel_square():\n",
-    "    # 큰 리스트 생성\n",
-    "    numbers = list(range(1, 1000000))\n",
-    "\n",
-    "    # 시작 시간 기록\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    # 병렬 처리 함수 호출\n",
-    "    results = parallel_square(numbers)\n",
-    "\n",
-    "    # 종료 시간 기록\n",
-    "    end_time = time.time()\n",
-    "\n",
-    "    # 결과 출력 (처리 시간)\n",
-    "    print(f\"Processing time: {end_time - start_time} seconds\")\n",
-    "\n",
-    "# 병렬 처리 함수 호출\n",
-    "run_parallel_square()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person1 = lambda x:x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person1.name = \"장만규\"\n",
+    "person1.age = 37\n",
+    "person1.hobby = \"python and dynamo\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'장만규'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person1.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python and dynamo'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person1.hobby"
+   ]
   }
  ],
  "metadata": {
