--- a/_study/autodeskLibrary_test/test.ipynb
+++ b/_study/autodeskLibrary_test/test.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import json"
    ]
   },
   {
