--- a/etc/_팀교육/StrToolkit/2024년 중간발표/Element Design/parse_frameResult.ipynb
+++ b/etc/_팀교육/StrToolkit/2024년 중간발표/Element Design/parse_frameResult.ipynb
@@ -69,6 +69,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2, 'c': 1}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict({\"a\": 1, \"b\": 2}, **{\"c\": 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -15127,29 +15147,6 @@
     "    return res\n",
     "\n",
     "modifyDict_PerElement(fullFrmaeData)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'ddd', 'd': 1}"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = {\"name\": \"ddd\"}\n",
-    "\n",
-    "x.update({\"d\": 1})\n",
-    "x"
    ]
   },
   {
