--- a/Laboratory/TypeManager/test.ipynb
+++ b/Laboratory/TypeManager/test.ipynb
@@ -37,6 +37,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "file = \"defaultTypeTree.json\"\n",
+    "# Step 1: Load the JSON file with Unicode text\n",
+    "# with open(file, 'r', encoding='utf-8') as file:\n",
+    "#     data = json.load(file)\n",
+    "\n",
+    "# Step 2: Save the JSON data in UTF-8 format\n",
+    "with open(file, 'w', encoding='utf-8') as file:\n",
+    "    json.dump(data, file, ensure_ascii=False, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
